--- a/services/catalog/Catalog.Api/appsettings.json
+++ b/services/catalog/Catalog.Api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "",
+    "BlobStorageConnection": ""
   },
   "Logging": {
     "LogLevel": {
