--- a/services/catalog/Catalog.Infrastructure/Catalog.Infrastructure.csproj
+++ b/services/catalog/Catalog.Infrastructure/Catalog.Infrastructure.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Azure.Storage.Blobs" Version="12.25.0"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11"/>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11"/>
     </ItemGroup>
