--- a/services/catalog/Catalog.IntegrationTests/Catalog.IntegrationTests.csproj
+++ b/services/catalog/Catalog.IntegrationTests/Catalog.IntegrationTests.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="FluentAssertions.AspNetCore.Mvc" Version="4.2.0"/>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.18"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
+        <PackageReference Include="Testcontainers.Azurite" Version="4.6.0"/>
         <PackageReference Include="Testcontainers.PostgreSql" Version="4.6.0"/>
         <PackageReference Include="xunit" Version="2.5.3"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3"/>
