--- a/services/catalog/Catalog.Api/appsettings.json
+++ b/services/catalog/Catalog.Api/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "",
-    "BlobStorageConnection": ""
+    "BlobStorageConnection": "",
+    "RedisConnection": ""
   },
   "Logging": {
     "LogLevel": {
