--- a/services/auth/Auth.Api/appsettings.json
+++ b/services/auth/Auth.Api/appsettings.json
@@ -4,9 +4,10 @@
     "BlobStorageConnection": ""
   },
   "Jwt": {
+    "PublicKeyPath": "jwt_pub_key.pem",
+    "PrivateKeyPath": "jwt_priv_key.pem",
     "Issuer": "mercibus-auth",
     "Audience": "mercibus-app",
-    "Key": "",
     "ExpireMillis": 3600000
   },
   "Email": {
