Implement JWT authentication for catalog service

--- a/services/catalog/Catalog.Api/appsettings.json
+++ b/services/catalog/Catalog.Api/appsettings.json
@@ -3,6 +3,11 @@
     "DefaultConnection": "",
     "BlobStorageConnection": ""
   },
+  "Jwt": {
+    "Authority": "https://localhost:7157",
+    "Issuer": "mercibus-auth",
+    "Audience": "mercibus-app"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
