Reduce JWT expiration time from 1 hour to 5 minutes

--- a/services/auth/Auth.Api/appsettings.json
+++ b/services/auth/Auth.Api/appsettings.json
@@ -8,7 +8,7 @@
     "PrivateKeyPath": "jwt_priv_key.pem",
     "Issuer": "mercibus-auth",
     "Audience": "mercibus-app",
-    "ExpireMillis": 3600000
+    "ExpireMillis": 300000
   },
   "Email": {
     "Server": "",
