--- a/services/auth/Auth.Api/appsettings.json
+++ b/services/auth/Auth.Api/appsettings.json
@@ -8,7 +8,7 @@
     "PrivateKeyPath": "jwt_priv_key.pem",
     "Issuer": "mercibus-auth",
     "Audience": "mercibus-app",
-    "ExpireMillis": 300000
+    "ExpireSeconds": 300
   },
   "Email": {
     "Server": "",
