Add test keys and update .gitignore to include them

--- a/services/auth/Auth.IntegrationTests/Auth.IntegrationTests.csproj
+++ b/services/auth/Auth.IntegrationTests/Auth.IntegrationTests.csproj
@@ -31,4 +31,13 @@
         <ProjectReference Include="..\Auth.Application\Auth.Application.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <None Update="test_priv_key.pem">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+        <None Update="test_pub_key.pem">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
+
 </Project>
