Add initial setup for Gateway service with Docker and Ocelot configuration

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,15 @@
-# ============================
+# Auth DB
+AUTH_DB_USER=your_auth_db_user
+AUTH_DB_PASS=your_auth_db_password
+AUTH_DB_NAME=mercibus_auth_db
+
 # Auth Service
-# ============================
-AUTH_DB_CONN="Server=auth-db;Port=5432;Database=mercibus_auth_db;User Id=${AUTH_DB_USER};Password=${AUTH_DB_PASS};"
-JWT_KEY=your_jwt_secret_here
+AUTH_DB_CONN="Server=auth-db;Port=5432;Database=${AUTH_DB_NAME};User Id=${AUTH_DB_USER};Password=${AUTH_DB_PASS};"
+JWT_PRIV_KEY_PATH=jwt_priv_key.pem
+JWT_PUB_KEY_PATH=jwt_pub_key.pem
+JWT_ISSUER=mercibus-auth
+JWT_AUDIENCE=mercibus-app
+JWT_EXPIRY_SECONDS=300
 EMAIL_SERVER=smtp.yourprovider.com
 EMAIL_PORT=587
 EMAIL_SENDER=your_email@example.com
@@ -12,26 +19,13 @@ EMAIL_CONFIRM_SUCCESS=https://yourdomain.com/email-confirm-success
 EMAIL_CONFIRM_FAIL=https://yourdomain.com/email-confirm-fail
 PASSWORD_RESET_URL=https://yourdomain.com/password-reset
 
-# ============================
-# Auth DB
-# ============================
-AUTH_DB_USER=your_auth_db_user
-AUTH_DB_PASS=your_auth_db_password
-AUTH_DB_NAME=mercibus_auth_db
-
-# ============================
-# Catalog Service
-# ============================
-CATALOG_DB_CONN="Server=catalog-db;Port=5432;Database=mercibus_catalog_db;User Id=${CATALOG_DB_USER};Password=${CATALOG_DB_PASS};"
-
-# ============================
 # Catalog DB
-# ============================
 CATALOG_DB_USER=your_catalog_db_user
 CATALOG_DB_PASS=your_catalog_db_password
 CATALOG_DB_NAME=mercibus_catalog_db
 
-# ============================
-# Shared Blob Storage (Azurite or Azure)
-# ============================
+# Catalog Service
+CATALOG_DB_CONN="Server=catalog-db;Port=5432;Database=${CATALOG_DB_NAME};User Id=${CATALOG_DB_USER};Password=${CATALOG_DB_PASS};"
+
+# Shared Blob Storage
 BLOB_CONN="DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=your_blob_account_key_here;BlobEndpoint=http://127.0.0.1:10000/devstoreaccount1;"
