--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -63,6 +63,7 @@ services:
       ASPNETCORE_ENVIRONMENT: Development
       ConnectionStrings__DefaultConnection: ${CATALOG_DB_CONN}
       ConnectionStrings__BlobStorageConnection: ${BLOB_CONN}
+      ConnectionStrings__RedisConnection: ${REDIS_CONN}
       Jwt__Issuer: ${JWT_ISSUER}
       Jwt__Audience: ${JWT_AUDIENCE}
       Jwt__Authority: http://auth-service:8080
@@ -92,6 +93,15 @@ services:
     volumes:
       - blob_storage_data:/data
     restart: always
+  
+  redis:
+    image: redis/redis-stack:latest
+    container_name: redis-container
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    restart: always
 
   consul:
     image: hashicorp/consul:latest
@@ -106,3 +116,4 @@ volumes:
   auth_db_data:
   catalog_db_data:
   blob_storage_data:
+  redis_data:
