--- a/.github/workflows/base-test-and-scan.yml
+++ b/.github/workflows/base-test-and-scan.yml
@@ -104,13 +104,15 @@ jobs:
             --target "dotnet" \
             --targetargs "test ./${{ inputs.project_dll }}.UnitTests/${{ inputs.project_dll }}.UnitTests.csproj --no-build --configuration Release" \
             --format opencover \
-            --output "./TestResults/unit.coverage.opencover.xml"
+            --format cobertura \
+            --output "./TestResults/unit.coverage"
 
           coverlet ./${{ inputs.project_dll }}.IntegrationTests/bin/Release/net8.0/${{ inputs.project_dll }}.IntegrationTests.dll \
             --target "dotnet" \
             --targetargs "test ./${{ inputs.project_dll }}.IntegrationTests/${{ inputs.project_dll }}.IntegrationTests.csproj --no-build --configuration Release" \
             --format opencover \
-            --output "./TestResults/integration.coverage.opencover.xml"
+            --format cobertura \
+            --output "./TestResults/integration.coverage"
         env:
           Jwt__Key: ${{ secrets.jwt_key }}
           Email__Server: ${{ secrets.email_server }}
