--- a/.github/workflows/base-test-and-scan.yml
+++ b/.github/workflows/base-test-and-scan.yml
@@ -98,23 +98,31 @@ jobs:
       - name: Add .NET tools to PATH
         run: echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
 
-      - name: Run unit and integration tests with OpenCover coverage
+      - name: Run Unit Tests with coverage
         run: |
-          coverlet ./${{ inputs.project_dll }}.UnitTests/bin/Release/net8.0/${{ inputs.project_dll }}.UnitTests.dll \
-            --target "dotnet" \
-            --targetargs "test ./${{ inputs.project_dll }}.UnitTests/${{ inputs.project_dll }}.UnitTests.csproj --no-build --configuration Release" \
-            --format opencover \
-            --output "./TestResults/unit.coverage.opencover.xml" \
-            --format cobertura \
-            --output "./TestResults/unit.coverage.cobertura.xml"
+          dotnet test ./${{ inputs.project_dll }}.UnitTests/${{ inputs.project_dll }}.UnitTests.csproj \
+            --no-build --configuration Release \
+            /p:CollectCoverage=true \
+            /p:CoverletOutput=./TestResults/unit.coverage \
+            /p:CoverletOutputFormat="opencover,cobertura"
+        env:
+          Jwt__Key: ${{ secrets.jwt_key }}
+          Email__Server: ${{ secrets.email_server }}
+          Email__Port: ${{ secrets.email_port }}
+          Email__Sender: ${{ secrets.email_sender }}
+          Email__Username: ${{ secrets.email_username }}
+          Email__Password: ${{ secrets.email_password }}
+          RedirectUrl__EmailConfirmSuccess: ${{ secrets.redirect_email_confirm_success }}
+          RedirectUrl__EmailConfirmFail: ${{ secrets.redirect_email_confirm_fail }}
+          RedirectUrl__PasswordReset: ${{ secrets.redirect_password_reset }}
 
-          coverlet ./${{ inputs.project_dll }}.IntegrationTests/bin/Release/net8.0/${{ inputs.project_dll }}.IntegrationTests.dll \
-            --target "dotnet" \
-            --targetargs "test ./${{ inputs.project_dll }}.IntegrationTests/${{ inputs.project_dll }}.IntegrationTests.csproj --no-build --configuration Release" \
-            --format opencover \
-            --output "./TestResults/integration.coverage.opencover.xml" \
-            --format cobertura \
-            --output "./TestResults/integration.coverage.cobertura.xml"
+      - name: Run Integration Tests with coverage
+        run: |
+          dotnet test ./${{ inputs.project_dll }}.IntegrationTests/${{ inputs.project_dll }}.IntegrationTests.csproj \
+            --no-build --configuration Release \
+            /p:CollectCoverage=true \
+            /p:CoverletOutput=./TestResults/integration.coverage \
+            /p:CoverletOutputFormat="opencover,cobertura"
         env:
           Jwt__Key: ${{ secrets.jwt_key }}
           Email__Server: ${{ secrets.email_server }}
