Add step to list TestResults folder in workflow

--- a/.github/workflows/base-test-and-scan.yml
+++ b/.github/workflows/base-test-and-scan.yml
@@ -133,6 +133,9 @@ jobs:
           RedirectUrl__EmailConfirmSuccess: ${{ secrets.redirect_email_confirm_success }}
           RedirectUrl__EmailConfirmFail: ${{ secrets.redirect_email_confirm_fail }}
           RedirectUrl__PasswordReset: ${{ secrets.redirect_password_reset }}
+          
+      - name: List TestResults folder
+        run: ls -R ./TestResults
 
       - name: Code coverage summary
         if: always()
