--- a/.github/workflows/base-test-and-scan.yml
+++ b/.github/workflows/base-test-and-scan.yml
@@ -134,11 +134,15 @@ jobs:
           RedirectUrl__EmailConfirmFail: ${{ secrets.redirect_email_confirm_fail }}
           RedirectUrl__PasswordReset: ${{ secrets.redirect_password_reset }}
 
+      - name: List coverage files
+        if: always()
+        run: ls -R ./services/*/*/TestResults || true
+
       - name: Code coverage summary
         if: always()
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
-          filename: ./services/**/**/TestResults/*.cobertura.xml
+          filename: ./services/**/TestResults/*.cobertura.xml
           badge: true
           fail_below_min: true
           format: markdown
