--- a/.github/workflows/base-test-and-scan.yml
+++ b/.github/workflows/base-test-and-scan.yml
@@ -136,7 +136,7 @@ jobs:
 
       - name: List coverage files
         if: always()
-        run: ls -R ./services/*/*/TestResults || true
+        run: ls -R ./services || true
 
       - name: Code coverage summary
         if: always()
