Update coverage file listing to use current directory

--- a/.github/workflows/base-test-and-scan.yml
+++ b/.github/workflows/base-test-and-scan.yml
@@ -136,7 +136,7 @@ jobs:
 
       - name: List coverage files
         if: always()
-        run: ls -R ./TestResults/
+        run: ls -R .
 
       - name: Code coverage summary
         if: always()
