--- a/.github/workflows/base-test-and-scan.yml
+++ b/.github/workflows/base-test-and-scan.yml
@@ -134,15 +134,11 @@ jobs:
           RedirectUrl__EmailConfirmFail: ${{ secrets.redirect_email_confirm_fail }}
           RedirectUrl__PasswordReset: ${{ secrets.redirect_password_reset }}
 
-      - name: List coverage files
-        if: always()
-        run: ls -R .
-
       - name: Code coverage summary
         if: always()
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
-          filename: ./TestResults/*.cobertura.xml
+          filename: ./**/TestResults/*.coverage.opencover.xml
           badge: true
           fail_below_min: true
           format: markdown
