--- a/services/auth/Auth.UnitTests/Auth.UnitTests.csproj
+++ b/services/auth/Auth.UnitTests/Auth.UnitTests.csproj
@@ -15,6 +15,7 @@
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.2"/>
         <PackageReference Include="FluentAssertions.AspNetCore.Mvc" Version="4.2.0"/>
+        <PackageReference Include="Hangfire.MemoryStorage" Version="1.8.1.2"/>
         <PackageReference Include="Mercibus.Common" Version="1.0.5" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
         <PackageReference Include="Moq" Version="4.20.72"/>
