--- a/services/orders/Orders.Application/Orders.Application.csproj
+++ b/services/orders/Orders.Application/Orders.Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Order.Domain\Orders.Domain.csproj" />
+    <ProjectReference Include="..\Orders.Domain\Orders.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
