Implement initial order management

--- a/services/orders/Orders.Application/Orders.Application.csproj
+++ b/services/orders/Orders.Application/Orders.Application.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="Mercibus.Common" Version="1.0.5" />
   </ItemGroup>
 
