Add MassTransit integration for event publishing

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -67,6 +67,9 @@ services:
       Jwt__Issuer: ${JWT_ISSUER}
       Jwt__Audience: ${JWT_AUDIENCE}
       Jwt__Authority: http://auth-service:8080
+      RabbitMq__Host: rabbitmq
+      RabbitMq__Username: ${RABBITMQ_USER}
+      RabbitMq__Password: ${RABBITMQ_PASS}
     depends_on:
       - catalog-db
     restart: always
@@ -101,6 +104,17 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
+    restart: always
+    
+  rabbitmq:
+    image: rabbitmq:4-management
+    container_name: rabbitmq-container
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASS}
     restart: always
 
   consul:
