--- a/services/catalog/Catalog.Api/appsettings.json
+++ b/services/catalog/Catalog.Api/appsettings.json
@@ -9,6 +9,11 @@
     "Issuer": "mercibus-auth",
     "Audience": "mercibus-app"
   },
+  "RabbitMq": {
+    "Host": "localhost",
+    "Username": "guest",
+    "Password": "guest"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
