--- a/services/catalog/Catalog.Infrastructure/Catalog.Infrastructure.csproj
+++ b/services/catalog/Catalog.Infrastructure/Catalog.Infrastructure.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
         <PackageReference Include="Azure.Storage.Blobs" Version="12.25.0"/>
+        <PackageReference Include="MassTransit" Version="8.5.2"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11"/>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11"/>
         <PackageReference Include="NRedisStack" Version="1.1.0"/>
