--- a/services/catalog/Catalog.IntegrationTests/Catalog.IntegrationTests.csproj
+++ b/services/catalog/Catalog.IntegrationTests/Catalog.IntegrationTests.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
         <PackageReference Include="Testcontainers.Azurite" Version="4.6.0"/>
         <PackageReference Include="Testcontainers.PostgreSql" Version="4.6.0"/>
+        <PackageReference Include="Testcontainers.RabbitMq" Version="4.6.0"/>
         <PackageReference Include="Testcontainers.Redis" Version="4.6.0"/>
         <PackageReference Include="xunit" Version="2.5.3"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3"/>
