Add MassTransit integration in order service

--- a/services/orders/Orders.Api/appsettings.json
+++ b/services/orders/Orders.Api/appsettings.json
@@ -3,6 +3,11 @@
     "DefaultConnection": "",
     "MongoConnection": ""
   },
+  "RabbitMq": {
+    "Host": "localhost",
+    "Username": "guest",
+    "Password": "guest"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
