--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -86,6 +86,44 @@ services:
     volumes:
       - catalog_db_data:/var/lib/postgresql/data
     restart: always
+    
+  order-service:
+    build:
+      context: ./services/orders/
+      dockerfile: Orders.Api/Dockerfile
+    container_name: order-service-container
+    ports:
+      - "9003:8080"
+    environment:
+      ASPNETCORE_ENVIRONMENT: Development
+      ConnectionStrings__DefaultConnection: ${ORDER_DB_CONN}
+      ConnectionStrings__MongoConnection: ${ORDER_MONGO_CONN}
+      Jwt__Issuer: ${JWT_ISSUER}
+      Jwt__Audience: ${JWT_AUDIENCE}
+      Jwt__Authority: http://auth-service:8080
+      RabbitMq__Host: rabbitmq
+      RabbitMq__Username: ${RABBITMQ_USER}
+      RabbitMq__Password: ${RABBITMQ_PASS}
+    restart: always
+  
+  order-db:
+    image: postgres:latest
+    container_name: order-db-container
+    ports:
+      - "8003:5432"
+    environment:
+      POSTGRES_USER: ${ORDER_DB_USER}
+      POSTGRES_PASSWORD: ${ORDER_DB_PASS}
+    volumes:
+      - order_db_data:/var/lib/postgresql/data
+    restart: always
+    
+  order-mongo:
+    image: mongo:latest
+    container_name: order-mongo-container
+    ports:
+      - "8004:27017"
+    restart: always
 
   blob-storage:
     image: mcr.microsoft.com/azure-storage/azurite
@@ -129,5 +167,6 @@ services:
 volumes:
   auth_db_data:
   catalog_db_data:
+  order_db_data:
   blob_storage_data:
   redis_data:
