--- a/consul/service-config.json
+++ b/consul/service-config.json
@@ -23,6 +23,18 @@
           "Interval": "10s"
         }
       ]
+    },
+    {
+        "ID": "order-service",
+        "Name": "order-service",
+        "Address": "order-service",
+        "Port": 8080,
+        "Checks": [
+            {
+            "HTTP": "http://order-service:8080/health",
+            "Interval": "10s"
+            }
+        ]
     }
   ]
 }
