Add JWT authentication and update order service for user validation

--- a/services/orders/Orders.Api/appsettings.json
+++ b/services/orders/Orders.Api/appsettings.json
@@ -3,6 +3,11 @@
     "DefaultConnection": "",
     "MongoConnection": ""
   },
+  "Jwt": {
+    "Authority": "https://localhost:7157",
+    "Issuer": "mercibus-auth",
+    "Audience": "mercibus-app"
+  },
   "RabbitMq": {
     "Host": "localhost",
     "Username": "guest",
