--- a/services/orders/Orders.Application/Orders.Application.csproj
+++ b/services/orders/Orders.Application/Orders.Application.csproj
@@ -13,7 +13,9 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="12.0.0" />
     <PackageReference Include="Mapster" Version="7.4.0" />
+    <PackageReference Include="MassTransit.Abstractions" Version="8.5.2"/>
     <PackageReference Include="Mercibus.Common" Version="1.0.5" />
+    <PackageReference Include="Mercibus.Messaging" Version="0.2.1"/>
   </ItemGroup>
 
 </Project>
