--- a/services/catalog/Catalog.Infrastructure/Catalog.Infrastructure.csproj
+++ b/services/catalog/Catalog.Infrastructure/Catalog.Infrastructure.csproj
@@ -8,16 +8,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Catalog.Application\Catalog.Application.csproj"/>
-        <ProjectReference Include="..\Catalog.Domain\Catalog.Domain.csproj"/>
+        <ProjectReference Include="..\Catalog.Application\Catalog.Application.csproj" />
+        <ProjectReference Include="..\Catalog.Domain\Catalog.Domain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Azure.Storage.Blobs" Version="12.25.0"/>
-        <PackageReference Include="MassTransit" Version="8.5.2"/>
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11"/>
-        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11"/>
-        <PackageReference Include="NRedisStack" Version="1.1.0"/>
+        <PackageReference Include="Azure.Storage.Blobs" Version="12.25.0" />
+        <PackageReference Include="MassTransit" Version="8.5.2" />
+        <PackageReference Include="Mercibus.Messaging" Version="0.3.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11" />
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
+        <PackageReference Include="NRedisStack" Version="1.1.0" />
     </ItemGroup>
 
 </Project>
