--- a/services/payment/Payments.Application/Payments.Application.csproj
+++ b/services/payment/Payments.Application/Payments.Application.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Payments.Domain\Payments.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Mercibus.Common" Version="1.0.5" />
+  </ItemGroup>
+
 </Project>
