Add get payment by id endpoint

--- a/services/payment/Payments.Application/Payments.Application.csproj
+++ b/services/payment/Payments.Application/Payments.Application.csproj
@@ -7,14 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\Payments.Domain\Payments.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="Mercibus.Common" Version="1.0.5" />
   </ItemGroup>
 
