--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -126,6 +126,37 @@ services:
     volumes:
       - order_mongo_data:/data/db
     restart: always
+    
+  payment-service:
+    build:
+      context: ./services/payments/
+      dockerfile: Payments.Api/Dockerfile
+    container_name: payment-service-container
+    ports:
+      - "9004:8080"
+    environment:
+      ASPNETCORE_ENVIRONMENT: Development
+      ConnectionStrings__DefaultConnection: ${PAYMENT_DB_CONN}
+      Jwt__Issuer: ${JWT_ISSUER}
+      Jwt__Audience: ${JWT_AUDIENCE}
+      Jwt__Authority: http://auth-service:8080
+      RabbitMq__Host: rabbitmq
+      RabbitMq__Username: ${RABBITMQ_USER}
+      RabbitMq__Password: ${RABBITMQ_PASS}
+    restart: always
+    
+  payment-db:
+    image: postgres:latest
+    container_name: payment-db-container
+    ports:
+      - "8005:5432"
+    environment:
+      POSTGRES_USER: ${PAYMENT_DB_USER}
+      POSTGRES_PASSWORD: ${PAYMENT_DB_PASS}
+      POSTGRES_DB: ${PAYMENT_DB_NAME}
+    volumes:
+      - payment_db_data:/var/lib/postgresql/data
+    restart: always
 
   blob-storage:
     image: mcr.microsoft.com/azure-storage/azurite
@@ -173,6 +204,7 @@ volumes:
   catalog_db_data:
   order_db_data:
   order_mongo_data:
+  payment_db_data:
   blob_storage_data:
   redis_data:
   rabbitmq_data:
