--- a/consul/service-config.json
+++ b/consul/service-config.json
@@ -1,5 +1,5 @@
 {
-  "services": [
+  "Services": [
     {
       "ID": "auth-service",
       "Name": "auth-service",
@@ -25,16 +25,28 @@
       ]
     },
     {
-        "ID": "order-service",
-        "Name": "order-service",
-        "Address": "order-service",
-        "Port": 8080,
-        "Checks": [
-            {
-            "HTTP": "http://order-service:8080/health",
-            "Interval": "10s"
-            }
-        ]
+      "ID": "order-service",
+      "Name": "order-service",
+      "Address": "order-service",
+      "Port": 8080,
+      "Checks": [
+        {
+          "HTTP": "http://order-service:8080/health",
+          "Interval": "10s"
+        }
+      ]
+    },
+    {
+      "ID": "payment-service",
+      "Name": "payment-service",
+      "Address": "payment-service",
+      "Port": 8080,
+      "Checks": [
+        {
+          "HTTP": "http://payment-service:8080/health",
+          "Interval": "10s"
+        }
+      ]
     }
   ]
 }
