--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -72,6 +72,9 @@ services:
       RabbitMq__Password: ${RABBITMQ_PASS}
     depends_on:
       - catalog-db
+      - redis
+      - rabbitmq
+      - blob-storage
     restart: always
 
   catalog-db:
@@ -104,6 +107,10 @@ services:
       RabbitMq__Host: rabbitmq
       RabbitMq__Username: ${RABBITMQ_USER}
       RabbitMq__Password: ${RABBITMQ_PASS}
+    depends_on:
+      - order-db
+      - order-mongo
+      - rabbitmq
     restart: always
   
   order-db:
@@ -123,6 +130,8 @@ services:
     container_name: order-mongo-container
     ports:
       - "8004:27017"
+    environment:
+      MONGO_INITDB_DATABASE: order-products
     volumes:
       - order_mongo_data:/data/db
     restart: always
@@ -143,6 +152,9 @@ services:
       RabbitMq__Host: rabbitmq
       RabbitMq__Username: ${RABBITMQ_USER}
       RabbitMq__Password: ${RABBITMQ_PASS}
+    depends_on:
+      - payment-db
+      - rabbitmq
     restart: always
     
   payment-db:
