Add currency support to order processing

--- a/services/orders/Orders.Api/appsettings.json
+++ b/services/orders/Orders.Api/appsettings.json
@@ -19,5 +19,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SupportedCurrencies": [
+    "IDR",
+    "PHP",
+    "VND",
+    "THB",
+    "SGD",
+    "MYR",
+    "USD"
+  ]
 }
