Add payment initiation functionality and Xendit client integration

--- a/services/payments/Payments.Api/appsettings.json
+++ b/services/payments/Payments.Api/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": ""
   },
+  "Xendit": {
+    "ApiKey": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
