--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -152,6 +152,7 @@ services:
       RabbitMq__Host: rabbitmq
       RabbitMq__Username: ${RABBITMQ_USER}
       RabbitMq__Password: ${RABBITMQ_PASS}
+      Xendit__ApiKey: ${XENDIT_API_KEY}
     depends_on:
       - payment-db
       - rabbitmq
