Move service discovery config to gateway

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -209,7 +209,7 @@ services:
     ports:
       - "8500:8500"
     volumes:
-      - ./consul:/consul/config
+      - ./gateway/Gateway/Consul:/consul/config
     restart: always
 
 volumes:
