Add JWT authentication and authorization to payment endpoints

--- a/services/payments/Payments.Api/appsettings.json
+++ b/services/payments/Payments.Api/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": ""
   },
+  "Jwt": {
+    "Authority": "https://localhost:7157",
+    "Issuer": "mercibus-auth",
+    "Audience": "mercibus-app"
+  },
   "Xendit": {
     "ApiKey": ""
   },
