--- a/.github/workflows/base-test-and-scan.yml
+++ b/.github/workflows/base-test-and-scan.yml
@@ -33,6 +33,8 @@ on:
         required: false
       redirect_password_reset:
         required: false
+      xendit_api_key:
+        required: false
 
 jobs:
   test-and-scan:
@@ -47,7 +49,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: 17
-          distribution: 'zulu'
+          distribution: "zulu"
 
       - name: Checkout code
         uses: actions/checkout@v4
@@ -115,6 +117,7 @@ jobs:
           RedirectUrl__EmailConfirmSuccess: ${{ secrets.redirect_email_confirm_success }}
           RedirectUrl__EmailConfirmFail: ${{ secrets.redirect_email_confirm_fail }}
           RedirectUrl__PasswordReset: ${{ secrets.redirect_password_reset }}
+          Xendit__ApiKey: ${{ secrets.xendit_api_key }}
 
       - name: Run integration tests with OpenCover coverage
         run: |
