Fix Prometheus configuration path in docker-compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -218,7 +218,7 @@ services:
     ports:
       - "9090:9090"
     volumes:
-      - ./monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheus_data:/prometheus
     restart: always
     
