--- a/services/auth/Auth.IntegrationTests/Auth.IntegrationTests.csproj
+++ b/services/auth/Auth.IntegrationTests/Auth.IntegrationTests.csproj
@@ -38,6 +38,9 @@
         <None Update="test_pub_key.pem">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
+        <None Update="xunit.runner.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
