--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
+    "@eslint-react/eslint-plugin": "^2.3.1",
     "@eslint/js": "^9.36.0",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
@@ -26,7 +27,7 @@
     "globals": "^16.4.0",
     "prettier": "3.6.2",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.45.0",
+    "typescript-eslint": "^8.46.2",
     "vite": "^7.1.7"
   }
 }
