Add SONAR_PROJECT_KEY to workflow

--- a/.github/workflows/frontend-scan.yml
+++ b/.github/workflows/frontend-scan.yml
@@ -30,5 +30,6 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_APP }}
           SONAR_HOST_URL: "https://sonarcloud.io"
+          SONAR_PROJECT_KEY: "mercibus_app"
         with:
           projectBaseDir: app/
