--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,8 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "axios": "^1.13.1",
+    "axios-auth-refresh": "^3.3.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
