--- a/app/package.json
+++ b/app/package.json
@@ -16,10 +16,12 @@
     }
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.13.1",
     "axios-auth-refresh": "^3.3.6",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
     "@eslint-react/eslint-plugin": "^2.3.1",
