--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     }
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.13.1",
     "axios-auth-refresh": "^3.3.6",
