Add CORS configuration and environment settings for allowed origins

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Gateway
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:4000,http://localhost:5173
+
 # Auth DB
 AUTH_DB_USER=your_auth_db_user
 AUTH_DB_PASS=your_auth_db_password
