--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,8 @@ services:
     container_name: gateway-container
     ports:
       - "9000:8080"
+    environment:
+      AllowedHosts: ${ALLOWED_ORIGINS}
     restart: always
 
   auth-service:
